PROYECTO-OLC2/back/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> create_database_statement
Rule 5     statement -> use_statement
Rule 6     statement -> declare_statement
Rule 7     statement -> set_statement
Rule 8     statement -> create_table_statement
Rule 9     statement -> select_statement
Rule 10    statement -> insert_statement
Rule 11    statement -> create_function_statement
Rule 12    statement -> create_procedure_statement
Rule 13    statement -> alter_table_statement
Rule 14    statement -> if_statement
Rule 15    statement -> exec_statement
Rule 16    statement -> drop_table_statement
Rule 17    statement -> case_statement
Rule 18    statement -> update_statement
Rule 19    statement -> while_statement
Rule 20    statement -> truncate_statement
Rule 21    statement -> delete_statement
Rule 22    create_database_statement -> CREATE DATA BASE NAME SEMICOLON
Rule 23    use_statement -> USE NAME SEMICOLON
Rule 24    declare_statement -> DECLARE ID AS type SEMICOLON
Rule 25    set_statement -> SET assignments SEMICOLON
Rule 26    assignments -> assignments COMMA ID ASSIGN a
Rule 27    assignments -> ID ASSIGN a
Rule 28    create_table_statement -> CREATE TABLE NAME L_PAREN properties R_PAREN SEMICOLON
Rule 29    properties -> properties COMMA property
Rule 30    properties -> property
Rule 31    property -> NAME type null_prod PRIMARY KEY
Rule 32    property -> NAME type null_prod
Rule 33    property -> NAME type null_prod REFERENCE NAME L_PAREN NAME R_PAREN
Rule 34    null_prod -> NOT NULL
Rule 35    null_prod -> NULL
Rule 36    null_prod -> <empty>
Rule 37    select_statement -> SELECT columns FROM NAME SEMICOLON
Rule 38    select_statement -> SELECT columns FROM NAME WHERE a SEMICOLON
Rule 39    insert_statement -> INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN SEMICOLON
Rule 40    columns -> columns COMMA column
Rule 41    columns -> column
Rule 42    column -> TIMES
Rule 43    column -> NAME
Rule 44    column -> call_function_prod
Rule 45    vals -> vals COMMA a
Rule 46    vals -> a
Rule 47    create_function_statement -> CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END SEMICOLON
Rule 48    create_procedure_statement -> CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END SEMICOLON
Rule 49    parameters -> parameters COMMA ID AS type
Rule 50    parameters -> ID AS type
Rule 51    alter_table_statement -> ALTER TABLE NAME ADD COLUMN NAME type SEMICOLON
Rule 52    alter_table_statement -> ALTER TABLE NAME DROP COLUMN NAME SEMICOLON
Rule 53    if_statement -> IF a THEN statement END IF SEMICOLON
Rule 54    if_statement -> IF a THEN statement ELSE statement END IF SEMICOLON
Rule 55    if_statement -> IF L_PAREN a COMMA a COMMA a R_PAREN SEMICOLON
Rule 56    exec_statement -> EXEC NAME vals SEMICOLON
Rule 57    drop_table_statement -> DROP TABLE NAME SEMICOLON
Rule 58    update_statement -> UPDATE NAME SET column_assignments WHERE a SEMICOLON
Rule 59    column_assignments -> column_assignments COMMA NAME ASSIGN a
Rule 60    column_assignments -> NAME ASSIGN a
Rule 61    while_statement -> WHILE a BEGIN statements END SEMICOLON
Rule 62    truncate_statement -> TRUNCATE TABLE NAME SEMICOLON
Rule 63    delete_statement -> DELETE FROM NAME WHERE a SEMICOLON
Rule 64    case_statement -> CASE WHEN a THEN a when_statement ELSE THEN a END
Rule 65    when_statement -> WHEN a THEN a when_statement
Rule 66    when_statement -> <empty>
Rule 67    type -> INT
Rule 68    type -> DECIMAL
Rule 69    type -> BIT
Rule 70    type -> NCHAR
Rule 71    type -> NVARCHAR
Rule 72    type -> DATE
Rule 73    type -> DATETIME
Rule 74    a -> a OR b
Rule 75    a -> b
Rule 76    b -> b AND c
Rule 77    b -> c
Rule 78    c -> NOT_SIGN d
Rule 79    c -> d
Rule 80    d -> d EQUALS e
Rule 81    d -> d NOT_EQ e
Rule 82    d -> d LESS_THAN e
Rule 83    d -> d GREATER_THAN e
Rule 84    d -> d LESS_EQ e
Rule 85    d -> d GREATER_EQ e
Rule 86    d -> e
Rule 87    e -> e PLUS f
Rule 88    e -> e MINUS f
Rule 89    e -> f
Rule 90    f -> f TIMES g
Rule 91    f -> f DIVIDE g
Rule 92    f -> g
Rule 93    g -> MINUS h
Rule 94    g -> h
Rule 95    h -> INTEGER_VALUE
Rule 96    h -> DECIMAL_VALUE
Rule 97    h -> STRING
Rule 98    h -> ID
Rule 99    call_function_prod -> HOY L_PAREN R_PAREN
Rule 100   call_function_prod -> CONCATENAR L_PAREN a COMMA a R_PAREN
Rule 101   call_function_prod -> SUBSTRAER L_PAREN a R_PAREN
Rule 102   call_function_prod -> CONTAR L_PAREN a R_PAREN
Rule 103   call_function_prod -> SUMA L_PAREN a R_PAREN
Rule 104   call_function_prod -> CAS L_PAREN a AS type R_PAREN

Terminals, with rules where they appear

ADD                  : 51
ALTER                : 51 52
AND                  : 76
AS                   : 24 47 48 49 50 104
ASSIGN               : 26 27 59 60
BASE                 : 22
BEGIN                : 47 48 61
BIT                  : 69
CAS                  : 104
CASE                 : 64
COLUMN               : 51 52
COMMA                : 26 29 40 45 49 55 55 59 100
CONCATENAR           : 100
CONTAR               : 102
CREATE               : 22 28 47 48
DATA                 : 22
DATE                 : 72
DATETIME             : 73
DECIMAL              : 68
DECIMAL_VALUE        : 96
DECLARE              : 24
DELETE               : 63
DIVIDE               : 91
DROP                 : 52 57
ELSE                 : 54 64
END                  : 47 48 53 54 61 64
EQUALS               : 80
EXEC                 : 56
FROM                 : 37 38 63
FUNCTION             : 47
GREATER_EQ           : 85
GREATER_THAN         : 83
HOY                  : 99
ID                   : 24 26 27 49 50 98
IF                   : 53 53 54 54 55
INSERT               : 39
INT                  : 67
INTEGER_VALUE        : 95
INTO                 : 39
KEY                  : 31
LESS_EQ              : 84
LESS_THAN            : 82
L_PAREN              : 28 33 39 39 47 48 55 99 100 101 102 103 104
MINUS                : 88 93
NAME                 : 22 23 28 31 32 33 33 33 37 38 39 43 47 48 51 51 52 52 56 57 58 59 60 62 63
NCHAR                : 70
NOT                  : 34
NOT_EQ               : 81
NOT_SIGN             : 78
NULL                 : 34 35
NVARCHAR             : 71
OR                   : 74
PLUS                 : 87
PRIMARY              : 31
PROCEDURE            : 48
REFERENCE            : 33
RETURN               : 47
R_PAREN              : 28 33 39 39 47 48 55 99 100 101 102 103 104
SELECT               : 37 38
SEMICOLON            : 22 23 24 25 28 37 38 39 47 48 51 52 53 54 55 56 57 58 61 62 63
SET                  : 25 58
STRING               : 97
SUBSTRAER            : 101
SUMA                 : 103
TABLE                : 28 51 52 57 62
THEN                 : 53 54 64 64 65
TIMES                : 42 90
TRUNCATE             : 62
UPDATE               : 58
USE                  : 23
VALUES               : 39
WHEN                 : 64 65
WHERE                : 38 58 63
WHILE                : 61
error                : 

Nonterminals, with rules where they appear

a                    : 26 27 38 45 46 53 54 55 55 55 58 59 60 61 63 64 64 64 65 65 74 100 100 101 102 103 104
alter_table_statement : 13
assignments          : 25 26
b                    : 74 75 76
c                    : 76 77
call_function_prod   : 44
case_statement       : 17
column               : 40 41
column_assignments   : 58 59
columns              : 37 38 39 40
create_database_statement : 4
create_function_statement : 11
create_procedure_statement : 12
create_table_statement : 8
d                    : 78 79 80 81 82 83 84 85
declare_statement    : 6
delete_statement     : 21
drop_table_statement : 16
e                    : 80 81 82 83 84 85 86 87 88
exec_statement       : 15
f                    : 87 88 89 90 91
g                    : 90 91 92
h                    : 93 94
if_statement         : 14
init                 : 0
insert_statement     : 10
null_prod            : 31 32 33
parameters           : 47 48 49
properties           : 28 29
property             : 29 30
select_statement     : 9
set_statement        : 7
statement            : 2 53 54 54
statements           : 1 2 47 48 61
truncate_statement   : 20
type                 : 24 31 32 33 47 49 50 51 104
update_statement     : 18
use_statement        : 5
vals                 : 39 45 56
when_statement       : 64 65
while_statement      : 19

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    CREATE          reduce using rule 3 (statements -> .)
    USE             reduce using rule 3 (statements -> .)
    DECLARE         reduce using rule 3 (statements -> .)
    SET             reduce using rule 3 (statements -> .)
    SELECT          reduce using rule 3 (statements -> .)
    INSERT          reduce using rule 3 (statements -> .)
    ALTER           reduce using rule 3 (statements -> .)
    IF              reduce using rule 3 (statements -> .)
    EXEC            reduce using rule 3 (statements -> .)
    DROP            reduce using rule 3 (statements -> .)
    CASE            reduce using rule 3 (statements -> .)
    UPDATE          reduce using rule 3 (statements -> .)
    WHILE           reduce using rule 3 (statements -> .)
    TRUNCATE        reduce using rule 3 (statements -> .)
    DELETE          reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    init                           shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> init .



state 2

    (1) init -> statements .
    (2) statements -> statements . statement
    (4) statement -> . create_database_statement
    (5) statement -> . use_statement
    (6) statement -> . declare_statement
    (7) statement -> . set_statement
    (8) statement -> . create_table_statement
    (9) statement -> . select_statement
    (10) statement -> . insert_statement
    (11) statement -> . create_function_statement
    (12) statement -> . create_procedure_statement
    (13) statement -> . alter_table_statement
    (14) statement -> . if_statement
    (15) statement -> . exec_statement
    (16) statement -> . drop_table_statement
    (17) statement -> . case_statement
    (18) statement -> . update_statement
    (19) statement -> . while_statement
    (20) statement -> . truncate_statement
    (21) statement -> . delete_statement
    (22) create_database_statement -> . CREATE DATA BASE NAME SEMICOLON
    (23) use_statement -> . USE NAME SEMICOLON
    (24) declare_statement -> . DECLARE ID AS type SEMICOLON
    (25) set_statement -> . SET assignments SEMICOLON
    (28) create_table_statement -> . CREATE TABLE NAME L_PAREN properties R_PAREN SEMICOLON
    (37) select_statement -> . SELECT columns FROM NAME SEMICOLON
    (38) select_statement -> . SELECT columns FROM NAME WHERE a SEMICOLON
    (39) insert_statement -> . INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN SEMICOLON
    (47) create_function_statement -> . CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements END SEMICOLON
    (48) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END SEMICOLON
    (51) alter_table_statement -> . ALTER TABLE NAME ADD COLUMN NAME type SEMICOLON
    (52) alter_table_statement -> . ALTER TABLE NAME DROP COLUMN NAME SEMICOLON
    (53) if_statement -> . IF a THEN statement END IF SEMICOLON
    (54) if_statement -> . IF a THEN statement ELSE statement END IF SEMICOLON
    (55) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN SEMICOLON
    (56) exec_statement -> . EXEC NAME vals SEMICOLON
    (57) drop_table_statement -> . DROP TABLE NAME SEMICOLON
    (64) case_statement -> . CASE WHEN a THEN a when_statement ELSE THEN a END
    (58) update_statement -> . UPDATE NAME SET column_assignments WHERE a SEMICOLON
    (61) while_statement -> . WHILE a BEGIN statements END SEMICOLON
    (62) truncate_statement -> . TRUNCATE TABLE NAME SEMICOLON
    (63) delete_statement -> . DELETE FROM NAME WHERE a SEMICOLON

    $end            reduce using rule 1 (init -> statements .)
    CREATE          shift and go to state 22
    USE             shift and go to state 23
    DECLARE         shift and go to state 24
    SET             shift and go to state 25
    SELECT          shift and go to state 26
    INSERT          shift and go to state 27
    ALTER           shift and go to state 28
    IF              shift and go to state 30
    EXEC            shift and go to state 31
    DROP            shift and go to state 29
    CASE            shift and go to state 32
    UPDATE          shift and go to state 33
    WHILE           shift and go to state 34
    TRUNCATE        shift and go to state 35
    DELETE          shift and go to state 36

    statement                      shift and go to state 3
    create_database_statement      shift and go to state 4
    use_statement                  shift and go to state 5
    declare_statement              shift and go to state 6
    set_statement                  shift and go to state 7
    create_table_statement         shift and go to state 8
    select_statement               shift and go to state 9
    insert_statement               shift and go to state 10
    create_function_statement      shift and go to state 11
    create_procedure_statement     shift and go to state 12
    alter_table_statement          shift and go to state 13
    if_statement                   shift and go to state 14
    exec_statement                 shift and go to state 15
    drop_table_statement           shift and go to state 16
    case_statement                 shift and go to state 17
    update_statement               shift and go to state 18
    while_statement                shift and go to state 19
    truncate_statement             shift and go to state 20
    delete_statement               shift and go to state 21

state 3

    (2) statements -> statements statement .

    CREATE          reduce using rule 2 (statements -> statements statement .)
    USE             reduce using rule 2 (statements -> statements statement .)
    DECLARE         reduce using rule 2 (statements -> statements statement .)
    SET             reduce using rule 2 (statements -> statements statement .)
    SELECT          reduce using rule 2 (statements -> statements statement .)
    INSERT          reduce using rule 2 (statements -> statements statement .)
    ALTER           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    EXEC            reduce using rule 2 (statements -> statements statement .)
    DROP            reduce using rule 2 (statements -> statements statement .)
    CASE            reduce using rule 2 (statements -> statements statement .)
    UPDATE          reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    TRUNCATE        reduce using rule 2 (statements -> statements statement .)
    DELETE          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)


state 4

    (4) statement -> create_database_statement .

    CREATE          reduce using rule 4 (statement -> create_database_statement .)
    USE             reduce using rule 4 (statement -> create_database_statement .)
    DECLARE         reduce using rule 4 (statement -> create_database_statement .)
    SET             reduce using rule 4 (statement -> create_database_statement .)
    SELECT          reduce using rule 4 (statement -> create_database_statement .)
    INSERT          reduce using rule 4 (statement -> create_database_statement .)
    ALTER           reduce using rule 4 (statement -> create_database_statement .)
    IF              reduce using rule 4 (statement -> create_database_statement .)
    EXEC            reduce using rule 4 (statement -> create_database_statement .)
    DROP            reduce using rule 4 (statement -> create_database_statement .)
    CASE            reduce using rule 4 (statement -> create_database_statement .)
    UPDATE          reduce using rule 4 (statement -> create_database_statement .)
    WHILE           reduce using rule 4 (statement -> create_database_statement .)
    TRUNCATE        reduce using rule 4 (statement -> create_database_statement .)
    DELETE          reduce using rule 4 (statement -> create_database_statement .)
    $end            reduce using rule 4 (statement -> create_database_statement .)
    END             reduce using rule 4 (statement -> create_database_statement .)
    ELSE            reduce using rule 4 (statement -> create_database_statement .)


state 5

    (5) statement -> use_statement .

    CREATE          reduce using rule 5 (statement -> use_statement .)
    USE             reduce using rule 5 (statement -> use_statement .)
    DECLARE         reduce using rule 5 (statement -> use_statement .)
    SET             reduce using rule 5 (statement -> use_statement .)
    SELECT          reduce using rule 5 (statement -> use_statement .)
    INSERT          reduce using rule 5 (statement -> use_statement .)
    ALTER           reduce using rule 5 (statement -> use_statement .)
    IF              reduce using rule 5 (statement -> use_statement .)
    EXEC            reduce using rule 5 (statement -> use_statement .)
    DROP            reduce using rule 5 (statement -> use_statement .)
    CASE            reduce using rule 5 (statement -> use_statement .)
    UPDATE          reduce using rule 5 (statement -> use_statement .)
    WHILE           reduce using rule 5 (statement -> use_statement .)
    TRUNCATE        reduce using rule 5 (statement -> use_statement .)
    DELETE          reduce using rule 5 (statement -> use_statement .)
    $end            reduce using rule 5 (statement -> use_statement .)
    END             reduce using rule 5 (statement -> use_statement .)
    ELSE            reduce using rule 5 (statement -> use_statement .)


state 6

    (6) statement -> declare_statement .

    CREATE          reduce using rule 6 (statement -> declare_statement .)
    USE             reduce using rule 6 (statement -> declare_statement .)
    DECLARE         reduce using rule 6 (statement -> declare_statement .)
    SET             reduce using rule 6 (statement -> declare_statement .)
    SELECT          reduce using rule 6 (statement -> declare_statement .)
    INSERT          reduce using rule 6 (statement -> declare_statement .)
    ALTER           reduce using rule 6 (statement -> declare_statement .)
    IF              reduce using rule 6 (statement -> declare_statement .)
    EXEC            reduce using rule 6 (statement -> declare_statement .)
    DROP            reduce using rule 6 (statement -> declare_statement .)
    CASE            reduce using rule 6 (statement -> declare_statement .)
    UPDATE          reduce using rule 6 (statement -> declare_statement .)
    WHILE           reduce using rule 6 (statement -> declare_statement .)
    TRUNCATE        reduce using rule 6 (statement -> declare_statement .)
    DELETE          reduce using rule 6 (statement -> declare_statement .)
    $end            reduce using rule 6 (statement -> declare_statement .)
    END             reduce using rule 6 (statement -> declare_statement .)
    ELSE            reduce using rule 6 (statement -> declare_statement .)


state 7

    (7) statement -> set_statement .

    CREATE          reduce using rule 7 (statement -> set_statement .)
    USE             reduce using rule 7 (statement -> set_statement .)
    DECLARE         reduce using rule 7 (statement -> set_statement .)
    SET             reduce using rule 7 (statement -> set_statement .)
    SELECT          reduce using rule 7 (statement -> set_statement .)
    INSERT          reduce using rule 7 (statement -> set_statement .)
    ALTER           reduce using rule 7 (statement -> set_statement .)
    IF              reduce using rule 7 (statement -> set_statement .)
    EXEC            reduce using rule 7 (statement -> set_statement .)
    DROP            reduce using rule 7 (statement -> set_statement .)
    CASE            reduce using rule 7 (statement -> set_statement .)
    UPDATE          reduce using rule 7 (statement -> set_statement .)
    WHILE           reduce using rule 7 (statement -> set_statement .)
    TRUNCATE        reduce using rule 7 (statement -> set_statement .)
    DELETE          reduce using rule 7 (statement -> set_statement .)
    $end            reduce using rule 7 (statement -> set_statement .)
    END             reduce using rule 7 (statement -> set_statement .)
    ELSE            reduce using rule 7 (statement -> set_statement .)


state 8

    (8) statement -> create_table_statement .

    CREATE          reduce using rule 8 (statement -> create_table_statement .)
    USE             reduce using rule 8 (statement -> create_table_statement .)
    DECLARE         reduce using rule 8 (statement -> create_table_statement .)
    SET             reduce using rule 8 (statement -> create_table_statement .)
    SELECT          reduce using rule 8 (statement -> create_table_statement .)
    INSERT          reduce using rule 8 (statement -> create_table_statement .)
    ALTER           reduce using rule 8 (statement -> create_table_statement .)
    IF              reduce using rule 8 (statement -> create_table_statement .)
    EXEC            reduce using rule 8 (statement -> create_table_statement .)
    DROP            reduce using rule 8 (statement -> create_table_statement .)
    CASE            reduce using rule 8 (statement -> create_table_statement .)
    UPDATE          reduce using rule 8 (statement -> create_table_statement .)
    WHILE           reduce using rule 8 (statement -> create_table_statement .)
    TRUNCATE        reduce using rule 8 (statement -> create_table_statement .)
    DELETE          reduce using rule 8 (statement -> create_table_statement .)
    $end            reduce using rule 8 (statement -> create_table_statement .)
    END             reduce using rule 8 (statement -> create_table_statement .)
    ELSE            reduce using rule 8 (statement -> create_table_statement .)


state 9

    (9) statement -> select_statement .
